# polymarket-lp-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  RISK_AND_OPTIMIZATION.md  docker-compose.yml  optimizing-lp-rewards.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: docker.yml
bot/: __main__.py  config.py  constants.py  types.py
bot/clients/: clob.py  data_api.py  gamma.py  synth.py  websocket_market.py  websocket_user.py
bot/core/: engine.py  scheduler.py  shutdown.py
bot/dashboard/: app.py  state.py  web.py
bot/dashboard/templates/: index.html
bot/dashboard/widgets/: activity_log.py  balance_chart.py  bayesian.py  footer_stats.py  markets_panel.py  stats_bar.py
bot/data/: database.py  migrations.py  models.py
bot/execution/: dry_run.py  order_manager.py
bot/notifications/: formatter.py  telegram.py
bot/risk/: anti_detection.py  inventory.py  manager.py
bot/security/: __init__.py  scrubber.py  vault.py
bot/strategies/: arbitrage.py  base.py  copy_trading.py  liquidity.py  liquidity_flip.py  synth_edge.py
bot/utils/: math.py  retry.py  time.py
deploy/: deploy.sh  install-deps.sh  setup-server.sh
scripts/: check_gamma_fields.py  check_rewards.py  check_rewards_paginated.py  estimate_liquidation.py  liquidate_all.py  lock_permissions.py  sell_position.py  setup_keychain.py  test_lp_filters.py  test_new_lp.py
